syntax = "proto3";
package service.types.v1;
import "service/types/v1/uploader.proto";
import "service/types/v1/stone_hub.proto";
option go_package = "github.com/bnb-chain/inscription-storage-provider/service/types/v1";

message SyncerServiceUploadECPieceRequest {
  string trace_id = 1;
  repeated PieceJob piece_jobs = 2;
  repeated bytes piece_data = 3;
}

message SyncerServiceUploadECPieceResponse {
  string trace_id = 1;
  StorageProviderSealInfo secondary_sp_info = 2;
  ErrMessage err_message = 3;
}

service SyncerService {
  rpc UploadECPiece(stream SyncerServiceUploadECPieceRequest) returns (SyncerServiceUploadECPieceResponse) {};
}
